# src/services/createPushTopic/types.ts
@@ -1,0 +1,3 @@
+export interface IResLocals {
+  topicName: string;
+}
